hphp/test/zend/good/ext/standard/tests/serialize/precision.php.skipif
<?php
<<__EntryPoint>> function main() {
if (pack('s', 1) != "\x01\x00")
  die("skip test for little-endian architectures");
}
