hphp/test/zend/bad/ext/date/tests/gmstrftime_variation19.php.skipif
<?php
if (strtoupper(substr(PHP_OS, 0, 3)) != 'WIN') {
    die("skip Test is valid for Windows");
}
?>